--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TraveleSIM - Stay Connected Worldwide</title>
+    <title>ecoESIM - Stay Connected Worldwide</title>
     <meta name="description" content="Travel with confidence using TraveleSIM - Connect instantly in over 190+ countries with our eSIM technology." />
     <meta name="author" content="TraveleSIM" />
 
