--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Travel with confidence using TraveleSIM - Connect instantly in over 190+ countries with our eSIM technology." />
     <meta name="author" content="TraveleSIM" />
 
-    <meta property="og:title" content="TraveleSIM - Stay Connected Worldwide" />
+    <meta property="og:title" content="ecoESIM - Stay Connected Worldwide" />
     <meta property="og:description" content="Travel with confidence using TraveleSIM - Connect instantly in over 190+ countries with our eSIM technology." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
