--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ecoESIM - Stay Connected Worldwide</title>
-    <meta name="description" content="Travel with confidence using TraveleSIM - Connect instantly in over 190+ countries with our eSIM technology." />
+    <meta name="description" content="Travel with confidence using ecoESIM - Connect instantly in over 190+ countries with our eSIM technology." />
     <meta name="author" content="TraveleSIM" />
 
     <meta property="og:title" content="ecoESIM - Stay Connected Worldwide" />
-    <meta property="og:description" content="Travel with confidence using TraveleSIM - Connect instantly in over 190+ countries with our eSIM technology." />
+    <meta property="og:description" content="Travel with confidence using ecoESIM - Connect instantly in over 190+ countries with our eSIM technology." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
