--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ecoESIM - Stay Connected Worldwide</title>
     <meta name="description" content="Travel with confidence using ecoESIM - Connect instantly in over 190+ countries with our eSIM technology." />
-    <meta name="author" content="TraveleSIM" />
+    <meta name="author" content="ecoESIM" />
 
     <meta property="og:title" content="ecoESIM - Stay Connected Worldwide" />
     <meta property="og:description" content="Travel with confidence using ecoESIM - Connect instantly in over 190+ countries with our eSIM technology." />
